@@ -7,6 +7,11 @@ if __name__ == '__main__':
     execfile(os.path.join(sys.path[0], 'framework.py'))
 
 from Products.CMFTestCase import CMFTestCase
+from Products.CMFTestCase.setup import CMF16
+
+if CMF16:
+    from Products.CMFTestCase.interfaces import ICMFTestSiteRoot
+
 
 CMFTestCase.setupCMFSite()
 default_user = CMFTestCase.default_user
@@ -53,6 +58,10 @@ class TestCMFTestCase(CMFTestCase.CMFTestCase):
     def testSkinScript(self):
         self.folder.invokeFactory('Document', id='doc', title='Foo')
         self.assertEqual(self.folder.doc.TitleOrId(), 'Foo')
+
+    if CMF16:
+        def testTestSiteRootInterface(self):
+            self.failUnless(ICMFTestSiteRoot.providedBy(self.portal))
 
 
 def test_suite():
